--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@payloadcms/next": "3.33.0",
     "@payloadcms/payload-cloud": "3.33.0",
     "@payloadcms/richtext-lexical": "3.33.0",
+    "@payloadcms/storage-vercel-blob": "3.33.0",
     "@tailwindcss/postcss": "^4.1.7",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
