--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.3",
     "@payloadcms/db-mongodb": "3.33.0",
+    "@payloadcms/live-preview-react": "^3.33.0",
     "@payloadcms/next": "3.33.0",
     "@payloadcms/payload-cloud": "3.33.0",
     "@payloadcms/richtext-lexical": "3.33.0",
