--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "graphql": "^16.8.1",
     "next": "15.3.0",
     "payload": "3.33.0",
-    "postcss": "^8.5.3",
+    "prettier-plugin-multiline-arrays": "^4.0.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
@@ -41,7 +41,13 @@
     "@types/react-dom": "19.1.2",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.3.0",
-    "prettier": "^3.4.2",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-css-order": "^2.1.2",
+    "prettier-plugin-organize-attributes": "^1.0.0",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-style-order": "^0.2.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "5.7.3"
   },
   "engines": {
