--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,14 @@
     },
     "target": "ES2022"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.js", "**/*.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "**/*.js",
+    "**/*.jsx",
+    "src/components/Accordion"
+  ],
   "exclude": ["node_modules"]
 }
