--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@payloadcms/richtext-lexical": "3.33.0",
     "@payloadcms/storage-vercel-blob": "3.33.0",
     "@tailwindcss/postcss": "^4.1.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "next": "15.3.0",
