--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.3",
+    "@next/third-parties": "^15.3.3",
     "@payloadcms/db-mongodb": "3.33.0",
     "@payloadcms/live-preview-react": "^3.33.0",
     "@payloadcms/next": "3.33.0",
@@ -26,7 +27,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
-    "next": "15.3.0",
+    "next": "^15.3.3",
     "payload": "3.33.0",
     "prettier-plugin-multiline-arrays": "^4.0.3",
     "react": "19.1.0",
