--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
   "dependencies": {
     "@headlessui/react": "^2.2.3",
     "@next/third-parties": "^15.3.3",
-    "@payloadcms/db-mongodb": "3.33.0",
-    "@payloadcms/live-preview-react": "^3.33.0",
-    "@payloadcms/next": "3.33.0",
-    "@payloadcms/payload-cloud": "3.33.0",
-    "@payloadcms/richtext-lexical": "3.33.0",
-    "@payloadcms/storage-vercel-blob": "3.33.0",
+    "@payloadcms/db-mongodb": "3.41.0",
+    "@payloadcms/live-preview-react": "^3.41.0",
+    "@payloadcms/next": "3.41.0",
+    "@payloadcms/payload-cloud": "3.41.0",
+    "@payloadcms/richtext-lexical": "3.41.0",
+    "@payloadcms/storage-vercel-blob": "3.41.0",
     "@tailwindcss/postcss": "^4.1.7",
     "@uidotdev/usehooks": "^2.4.1",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "next": "^15.3.3",
-    "payload": "3.33.0",
+    "payload": "3.41.0",
     "prettier-plugin-multiline-arrays": "^4.0.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -53,7 +53,7 @@
     "typescript": "5.7.3"
   },
   "engines": {
-    "node": "^18.20.2 || >=20.9.0",
+    "node": "^18.20.2",
     "pnpm": "^9 || ^10"
   },
   "pnpm": {
